--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <org.bouncycastle.version>1.46</org.bouncycastle.version>
     </properties>
+<dependencies>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -34,11 +35,6 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcmail-jdk16</artifactId>
-            <version>${org.bouncycastle.version}</version>
-        </dependency>
 
         <!-- ************* Bouncy Castle Provider DEPENDENCIES ************* -->
         <dependency>
@@ -47,13 +43,31 @@
             <version>${org.bouncycastle.version}</version>
         </dependency>
 
-        <!-- ************* Bouncy Castle OpenPGP API DEPENDENCIES ************* -->
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bctsp-jdk16</artifactId>
-            <version>${org.bouncycastle.version}</version>
-        </dependency>
-    </dependencies>
+    <dependency>
+        <groupId>castor</groupId>
+        <artifactId>castor</artifactId>
+        <version>0.9.7</version>
+    </dependency>
+
+    <dependency>
+        <groupId>xerces</groupId>
+        <artifactId>xercesImpl</artifactId>
+        <version>2.8.1</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+    <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.2</version>
+    </dependency>
+    <dependency>
+        <groupId>oro</groupId>
+        <artifactId>oro</artifactId>
+        <version>2.0.8</version>
+    </dependency>
+
+
+</dependencies>
 
 
 </project>
