Update  Auth request URL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ authReqVersion = 2.5
 authReqDigSigPassword = public
 authReqDigSigKeyAlias = PublicAUAforStagingServices
 authReqTerminal = public
-authReqUrl = http://10.5.96.111:8009/uidauthserver/2.5
+authReqUrl = https://authserver-stage.uidai.gov.in/uidauthserver/2.5
 authReqDigSigFile = /home/sambit/hackathon/hackathon-auth-test/src/main/resources/PublicAUAforStagingServices.p12
 authReqPubKeyFile = /home/sambit/hackathon/hackathon-auth-test/src/main/resources/AuthStaging25082025.cer
 pidVersion = 2.0
